--- a/css/ethplorer.css
+++ b/css/ethplorer.css
@@ -542,6 +542,58 @@ tr.paginationFooter td {
     padding-top: 4px;
 }
 
+.filter-box.in-tabs {
+    text-align: right;
+    height: 0px;
+    margin-top: -50px;
+}
+
+.filter-box.in-tabs .filter-form{
+    width: 300px;
+    float: right;
+}
+
+.filer-mark {
+    color: black;
+    background-color: yellow;
+}
+
+.filter-box.out-of-tabs{
+    text-align: right;
+    height: 15px;
+    margin-top: 5px;
+}
+
+.filter-clear {
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    top: 3px;
+    right: 24px;
+    color: #8c8c8c;
+    cursor: pointer;
+    display: none;
+}
+
+.filter-box.out-of-tabs .filter-clear {
+    right: 24px;
+}
+
+#filter_list {
+    border-radius: 7px;
+    padding-left: 5px;
+    padding-right: 24px;
+    width: 240px;
+    border: 1px solid white;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    background-color: black;
+    color: white;
+}
+
+.notFoundRow td {
+    text-align: center !important;
+}
 /* Timer*/
 .timer{
     width: 47px;
@@ -659,6 +711,9 @@ tr.paginationFooter td {
 }
 
 @media screen and (max-width: 399px) {
+    .total-records {
+        display: none;
+    }
     .pagination-sm>li>a, .pagination-sm>li>span {
         padding: 7px 5px;
         font-size: 9px;
@@ -716,6 +771,14 @@ a.token-update {
 }
 
 @media screen and (max-width: 767px) {
+    
+    .filter-box {
+        text-align: right;
+        height: 15px;
+        margin-top: 10px;
+    }    
+    
+    
     #ethplorer-path {
         font-size: 16px;
     }
