--- a/css/ethplorer.css
+++ b/css/ethplorer.css
@@ -378,6 +378,14 @@ a.dashed {
     text-overflow: ellipsis
 }
 
+#ethplorer-daily-token {
+    display: none;
+    overflow: hidden;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
 .same-address {
     opacity: 0.4;
 }
