--- a/css/ethplorer.css
+++ b/css/ethplorer.css
@@ -584,6 +584,16 @@ tr.paginationFooter td {
     font-size: 24px;
 }
 
+/* Special Safari hack */
+@media screen and (min-color-index:0) and(-webkit-min-device-pixel-ratio:0) 
+{ @media {
+    .filter-clear {
+        top: -6px;
+    }      
+    }
+}}
+
+
 #filter-error {
     color: #7b1818;
     margin-top: 15px;
