--- a/api/widget.css
+++ b/api/widget.css
@@ -4,19 +4,19 @@
 }
 
 /* Loading */
-.txs-loading {
+.ethplorer-widget .txs-loading {
     margin-top: 16px;
     margin-bottom: 16px;
 }
 
 /* Transfer list widget */
-.txs {
+.ethplorer-widget .txs {
     width: 100%;
     border: 0 !important;
     border-collapse: collapse;
 }
 
-.txs-header {
+.ethplorer-widget .txs-header {
     font-family: 'Open Sans', sans-serif;
     padding: 5px;
     color: white;
@@ -24,12 +24,12 @@
     position:relative;
 }
 
-.txs.small .tx-field {
+.ethplorer-widget .txs.small .tx-field {
     padding-top: 0px;
     font-size: 14px;
 }
 
-.tx-send {
+.ethplorer-widget .tx-send {
     max-width: 120px;
     overflow: hidden;
     display: inline-block;
@@ -38,7 +38,7 @@
     padding-right: 8px;
 }
 
-.tx-field {
+.ethplorer-widget .tx-field {
     font-family: 'Open Sans', sans-serif;
     text-align: left;
     padding-top: 10px;
@@ -51,49 +51,52 @@
     padding-right: 5px;
 }
 
-.tx-token {
+.ethplorer-widget .tx-token {
     min-width: 32px;
     max-width: 60px;
 }
-.txs.small .tx-send, .txs.small .tx-date {
+.ethplorer-widget .txs.small .tx-send,
+.ethplorer-widget .txs.small .tx-date {
     padding-top: 5px;
 }
-.txs.small .tx-amount {
+.ethplorer-widget .txs.small .tx-amount {
     padding-bottom: 5px;
 }
-.txs.small tr td:nth-child(2) {
+.ethplorer-widget .txs.small tr td:nth-child(2) {
     text-align: right;
 }
-.txs.small .tx-link {
+.ethplorer-widget .txs.small .tx-link {
     max-width: 140px;
 }
-.txs.small .tx-amount {
+.ethplorer-widget .txs.small .tx-amount {
     max-width: 200px;
 }
-.txs.small {
+.ethplorer-widget .txs.small {
     display: none;
 }
-.txs tr.hidden {
+.ethplorer-widget .txs tr.hidden {
     transform: rotateX(-90deg);
     transition: all 1s cubic-bezier(.36,-0.64,.34,1.76);    
     opacity: 0;
 }
-.txs tr.hidden.new {
+.ethplorer-widget .txs tr.hidden.new {
     opacity: 1;
     transform: none;
     transition: all 1s cubic-bezier(.36,-0.64,.34,1.76);
 }
 
-.tx-date {
+.ethplorer-widget .tx-date {
     max-width: 80px;
     text-align: center;
 }
 
-.tx-hash {
+.ethplorer-widget .tx-hash {
     max-width: 80px;
 }
 
-a.tx-link, a.tx-link:visited, a.tx-link:hover {
+.ethplorer-widget a.tx-link,
+.ethplorer-widget a.tx-link:visited,
+.ethplorer-widget a.tx-link:hover {
     color: #47C2FF !important;
     display: inline-block;
     max-width: 120px;
@@ -101,41 +104,46 @@ a.tx-link, a.tx-link:visited, a.tx-link:hover {
     text-overflow: ellipsis !important;
 }
 
-a.tx-link, a.tx-link:visited {
+.ethplorer-widget a.tx-link,
+.ethplorer-widget a.tx-link:visited {
    text-decoration: none !important;
 }
-a.tx-link:hover {
+.ethplorer-widget a.tx-link:hover {
    text-decoration: underline !important;
 }
-.tx-token a.tx-link, .tx-token a.tx-link:visited, .tx-token a.tx-link:hover  {
+.ethplorer-widget .tx-token a.tx-link,
+.ethplorer-widget .tx-token a.tx-link:visited,
+.ethplorer-widget .tx-token a.tx-link:hover {
     max-width: 70px;
 }
-.tx-amount {
+.ethplorer-widget .tx-amount {
     text-align: right !important;    
 }
-.tx-amount a, .tx-amount a:visited, .tx-amount a:hover{
+.ethplorer-widget .tx-amount a,
+.ethplorer-widget .tx-amount a:visited,
+.ethplorer-widget .tx-amount a:hover{
     max-width: 140px;
     overflow: hidden;
     text-overflow: ellipsis !important;
     color: white !important;
 }
 
-.txs-debug {
+.ethplorer-widget .txs-debug {
     position: absolute;
     right: 5px;
     top: 0px;
 }
-.txs-debug div {
+.ethplorer-widget .txs-debug div {
     cursor: pointer;
     width: 32px;
     text-align: center;
     opacity: 0.5;
     float:left;
 }
-.txs-add {
+.ethplorer-widget .txs-add {
     color: #0099ff;
 }
-.txs-debug div:hover {
+.ethplorer-widget .txs-debug div:hover {
     opacity: 1; 
 }
 
@@ -157,29 +165,31 @@ a.tx-link:hover {
 }
 
 @media screen and (min-width: 999px) {
-    .tx-token {
+    .ethplorer-widget .tx-token {
         max-width: 160px;
     }
-    .tx-token a.tx-link, .tx-token a.tx-link:visited, .tx-token a.tx-link:hover  {
+    .ethplorer-widget .tx-token a.tx-link,
+    .ethplorer-widget .tx-token a.tx-link:visited,
+    .ethplorer-widget .tx-token a.tx-link:hover  {
         max-width: 150px;
     }
 }
 @media screen and (max-width: 680px) {
-    .txs.small .tx-link {
+    .ethplorer-widget .txs.small .tx-link {
         max-width: 180px;
     }    
-    .widget-txs {
+    .ethplorer-widget .widget-txs {
         max-width: 360px;
     }
-    .txs {
+    .ethplorer-widget .txs {
         display: none;
     }
-    .txs.small {
+    .ethplorer-widget .txs.small {
         display: table;
     }
 }
 @media screen and (max-width: 360px) {
-    .txs.small .tx-link {
+    .ethplorer-widget .txs.small .tx-link {
         max-width: 140px;
     }    
 }
