--- a/api/widget.css
+++ b/api/widget.css
@@ -20,7 +20,7 @@
 
 .ethplorer-widget .txs-header {
     padding: 5px;
-    color: white;
+    color: #dedede;
     font-size: 1.3em;
     position:relative;
 }
@@ -34,7 +34,7 @@
     max-width: 120px;
     overflow: hidden;
     display: inline-block;
-    color: white;
+    color: #dedede;
     padding-left: 8px;
     padding-right: 8px;
 }
@@ -125,7 +125,7 @@
     max-width: 140px;
     overflow: hidden;
     text-overflow: ellipsis !important;
-    color: white !important;
+    color: #dedede !important;
 }
 
 .ethplorer-widget .txs-debug {
@@ -147,20 +147,20 @@
     opacity: 1; 
 }
 
-#ethplorer-top .tx-link {
+.ethplorer-widget.widget-topTokens #ethplorer-top .tx-link {
     max-width: 450px;
 }
-#ethplorer-top tr td:nth-child(3){
+.ethplorer-widget.widget-topTokens tr td:nth-child(3){
     text-align: right;
-    color: white !important;
+    color: #dedede !important;
 }
-#ethplorer-top tr td:nth-child(1){
+.ethplorer-widget.widget-topTokens tr td:nth-child(1){
     text-align: right;
     padding-right: 10px;
     color: #8a8c85 !important;
     padding-bottom: 4px;
 }
-#ethplorer-top .tx-unknown {
+.ethplorer-widget.widget-topTokens .tx-unknown {
     color: #676767 !important;
 }
 
