--- a/api/widget.css
+++ b/api/widget.css
@@ -157,10 +157,12 @@
 }
 .ethplorer-widget.widget-topTokens tr td:nth-child(1){
     text-align: right;
-    padding-right: 10px;
+    padding-right: 0px;
+    padding-left: 2px;
     color: #8a8c85 !important;
     padding-bottom: 4px;
-    max-width: 32px;
+    max-width: 16px;
+    width: 16px;
 }
 .ethplorer-widget.widget-topTokens a.tx-link.tx-unknown {
     color: #676767 !important;
