--- a/css/ethplorer.css
+++ b/css/ethplorer.css
@@ -105,6 +105,10 @@ tr.paginationFooter td ul.pagination {
     display: none;
 }
 
+#address-token-details h3 {
+    max-width: 90%;
+}
+
 .content-page h3 {
     padding-left: 20px;
     padding-top: 12px;
