--- a/css/ethplorer.css
+++ b/css/ethplorer.css
@@ -526,7 +526,12 @@ a.dashed {
 }
 
 .total-supply-usd {
-    opacity: 0.6;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.transfer-usd {
+    color: rgba(255, 255, 255, 0.6);
+    font-size: 0.8em;
 }
 
 .hash-from-to {
