periodVolume / opCount top widget

--- a/api/widget.css
+++ b/api/widget.css
@@ -185,6 +185,16 @@
     max-width: 60vw;
 }
 
+.ethplorer-widget.widget-topTokens a[data-criteria] {
+    cursor: pointer;
+}
+
+
+.ethplorer-widget.widget-topTokens a[data-criteria].ewSelected {
+    cursor: default;
+    color: white;
+    text-decoration: none;
+}
 
 @media screen and (min-width: 999px) {
     .ethplorer-widget .tx-token {
